--- a/Personal_Portfolio/src/styling/Education.css
+++ b/Personal_Portfolio/src/styling/Education.css
@@ -5,3 +5,27 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+#highschool{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 15px;
+    width: 15rem;
+}
+
+#windermere-info{
+    align-self: center;
+}
+
+#Langara{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 15px;
+    width: 15rem;
+}
+
+#Langara-info{
+    align-self: center;
+}
