--- a/Personal_Portfolio/src/styling/Projects.css
+++ b/Personal_Portfolio/src/styling/Projects.css
@@ -5,3 +5,27 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+#Lost-project{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 15px;
+    width: 15rem;
+}
+
+#TD-game{
+    align-self: center;
+}
+
+#WIP{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 15px;
+    width: 15rem;
+}
+
+#Health-website{
+    align-self: center;
+}
